@@ -162,8 +162,11 @@ if [istarget sh*-*-*] then {
 
 	run_dump_test "tlsnopic"
 
-	# Test -renesas.
+	# Test --renesas.
 	run_dump_test "renesas-1"
+
+	# Test --allow-reg-prefix.
+	run_dump_test "reg-prefix"
     }
 }
 
