@@ -1,0 +1,2 @@
+        .text
+	movli.l @r1,$r0
