@@ -1,5 +1,9 @@
 -*- text -*-
 
+* The SH target supports a new command line switch --enable-reg-prefix which,
+  if enabled, will allow register names to be optionally prefixed with a $
+  character.  This allows register names to be distinguished from label names.
+  
 * Macros with a variable number of arguments are now supported. See the
   documentation for how this works.
 
